--- a/10.HTML文档.md
+++ b/10.HTML文档.md
@@ -36,4 +36,208 @@
     引用数据类型：对象(Object)、数组(Array)、函数(Function)。
     JavaScript数组：var cars=new Array("Saab","Volvo","BMW"); 或者var cars=["Saab","Volvo","BMW"];
     JavaScript对象：var person={firstname:"John", lastname:"Doe", id:5566};
-    
+十一、JavaScript对象
+    JavaScript 对象是变量的容器。
+十二、JavaScript函数语法
+    函数就是包裹在花括号中的代码块，前面使用了关键词 function：
+    function functionname（）{
+        执行代码
+    }
+    调用带参数的函数，逗号隔开 
+    function myFunction(var1,var2)
+    {
+        代码
+    }
+    局部JavaScript，全局JavaScript
+    JavaScript变量的生存期：局部变量在函数运行以后被删除，全局变量会在页面关闭删除。
+十三、JavaScript作用域
+    JavaScript 函数作用域: 作用域在函数内修改。
+    在 JavaScript 中, 作用域为可访问变量，对象，函数的集合。
+    JavaScript全局变量，网页中所有脚本和函数均可使用。
+    var carName = " Volvo";
+    // 此处可调用 carName 变量
+    function myFunction() {
+        // 函数内可调用 carName 变量
+    }
+    JavaScript变量生命周期
+    局部变量在函数执行完毕后销毁
+    全局变量在页面关闭后销毁
+    没有使用var声明，则可以视为全局变量
+十四、JavaScript事件
+    常见的HTML事件
+    onchange     HTML元素改变
+    onclick      用户点击HTML元素
+    onmouseover  用户在一个HTML元素上移动鼠标
+    onmouseout   用户从一个HTML元素上移开鼠标
+    onkeydown    用户按下键盘按键
+    onload       浏览器已完成页面的加载
+    事件可以用来表单验证，用户输入，用户行为及浏览器操作
+    页面加载时，用户点击时，输入时
+十五、JavaScript字符串
+    字符串可以是插入到引号中的任何字符。你可以使用单引号或双引号：
+    你也可以在字符串添加转义字符来使用引号：var y = "He is called \"Johnny\"";
+    可以使用反斜杠 (\) 来转义 "Vikings" 字符串中的双引号，如下:
+     反斜杠是一个转义字符。 转义字符将特殊字符转换为字符串字符：
+     转义字符 (\) 可以用于转义撇号，换行，引号，等其他特殊字符。
+     \' 单引号  
+     \" 双引号
+     \\ 反斜杠
+     \n 换行
+     \r 回车
+     \t tab制表符
+     \b 退格
+     \f 换页符
+     字符串属性 constructor  length prototype
+     字符串方法
+     charAt()	返回指定索引位置的字符
+    charCodeAt()	返回指定索引位置字符的 Unicode 值
+    concat()	连接两个或多个字符串，返回连接后的字符串
+    fromCharCode()	将 Unicode 转换为字符串
+    indexOf()	返回字符串中检索指定字符第一次出现的位置
+    lastIndexOf()	返回字符串中检索指定字符最后一次出现的位置
+    localeCompare()	用本地特定的顺序来比较两个字符串
+    match()	找到一个或多个正则表达式的匹配
+    replace()	替换与正则表达式匹配的子串
+    search()	检索与正则表达式相匹配的值
+    slice()	提取字符串的片断，并在新的字符串中返回被提取的部分
+    split()	把字符串分割为子字符串数组
+    substr()	从起始索引号提取字符串中指定数目的字符
+    substring()	提取字符串中两个指定的索引号之间的字符
+    toLocaleLowerCase()	根据主机的语言环境把字符串转换为小写，只有几种语言（如土耳其语）具有地方特有的大小写映射
+    toLocaleUpperCase()	根据主机的语言环境把字符串转换为大写，只有几种语言（如土耳其语）具有地方特有的大小写映射
+    toLowerCase()	把字符串转换为小写
+    toString()	返回字符串对象值
+    toUpperCase()	把字符串转换为大写
+    trim()	移除字符串首尾空白
+    valueOf()	返回某个字符串对象的原始值
+十六、JavaScript运算符
+    算术运算符：y=5，下面的表格解释了这些算术运算符：
+        +	加法	x=y+2	7	5	
+        -	减法	x=y-2	3	5	
+        *	乘法	x=y*2	10	5	
+        /	除法	x=y/2	2.5	5	
+        %	取模（余数）	x=y%2	1	5	
+        ++	自增	x=++y	6	6	
+        x=y++	5	6	
+        --	自减
+    赋值运算符：给定 x=10 和 y=5，下面的表格解释了赋值运算符：
+        =	x=y	 	x=5	
+        +=	x+=y	x=x+y	x=15	
+        -=	x-=y	x=x-y	x=5	
+        *=	x*=y	x=x*y	x=50	
+        /=	x/=y	x=x/y	x=2	
+        %=	x%=y    x=x%y	x=0
+十七、JavaScript比较和逻辑运算符
+        比较运算符在逻辑语句中使用，以测定变量或值是否相等。
+        x=5，下面的表格解释了比较运算符：
+        ==	等于	x==8	false	
+        x==5	true	
+        ===	绝对等于（值和类型均相等）	x==="5"	false	
+        x===5	true	
+        !=	 不等于	x!=8	true	
+        !==	 不绝对等于（值和类型有一个不相等，或两个都不相等）	x!=="5"	true	
+        x!==5	false	
+        >	 大于	x>8	false	
+        <	 小于	x<8	true	
+        >=	 大于或等于	x>=8	false	
+        <=	 小于或等于	x<=8	true
+十八、JavaScript if……else语句
+    语法 
+        if (condition)
+        {
+            当条件为 true 时执行的代码
+        }
+        else
+        {
+            当条件不为 true 时执行的代码
+        }
+
+        多if
+        if (condition1)
+        {
+            当条件 1 为 true 时执行的代码
+        }
+        else if (condition2)
+        {
+            当条件 2 为 true 时执行的代码
+        }
+        else
+        {
+        当条件 1 和 条件 2 都不为 true 时执行的代码
+        }
+十九、JavaScript switch 语句
+    语法
+    switch(n)
+    {
+    case 1:
+        执行代码块 1
+        break;
+    case 2:
+        执行代码块 2
+        break;
+    default:
+        与 case 1 和 case 2 不同时执行的代码
+    }
+二十、JavaScript for循环
+    语法
+    for (var i=0;i<cars.length;i++)
+    { 
+    document.write(cars[i] + "<br>");
+    }
+    不同类型的循环
+    JavaScript 支持不同类型的循环：
+    for - 循环代码块一定的次数
+    for/in - 循环遍历对象的属性 
+    var person={fname:"John",lname:"Doe",age:25}; 
+    类似java for循环遍历
+    for (x in person)  // x 为属性名
+    {
+        txt=txt + person[x];
+    }
+    while - 当指定的条件为 true 时循环指定的代码块
+    do/while - 同样当指定的条件为 true 时循环指定的代码块
+
+    while (条件)
+    {
+        需要执行的代码
+    }
+二十一、JavaScript数据类型
+    你可以使用 typeof 操作符来查看 JavaScript 变量的数据类型。
+    typeof "John"                 // 返回 string
+    typeof 3.14                   // 返回 number
+    typeof NaN                    // 返回 number
+    typeof false                  // 返回 boolean
+    typeof [1,2,3,4]              // 返回 object
+    typeof {name:'John', age:34}  // 返回 object
+    typeof new Date()             // 返回 object
+    typeof function () {}         // 返回 function
+    typeof myCar                  // 返回 undefined (如果 myCar 没有声明)
+    typeof null                   // 返回 object   
+
+    NaN 的数据类型是 number
+    数组(Array)的数据类型是 object
+    日期(Date)的数据类型为 object
+    null 的数据类型是 object
+    未定义变量的数据类型为 undefined
+二十二、JavaScript正则表达式
+    语法
+    /正则表达式主体/修饰符(可选)
+    正则表达式修饰符
+    正则表达式模式
+二十三、JavaScript this关键字
+    面向对象语言中 this 表示当前对象的一个引用。
+    但在 JavaScript 中 this 不是固定不变的，它会随着执行环境的改变而改变。
+    在方法中，this 表示该方法所属的对象。
+    如果单独使用，this 表示全局对象。
+    在函数中，this 表示全局对象。
+    在函数中，在严格模式下，this 是未定义的(undefined)。
+    在事件中，this 表示接收事件的元素。
+    类似 call() 和 apply() 方法可以将 this 引用到任何对象。
+二十四、JavaScript json
+    JSON 是用于存储和传输数据的格式。JavaScript Object Notation
+    JSON 通常用于服务端向网页传递数据 。
+    JSON 语法规则
+        数据为 键/值 对。
+        数据由逗号分隔。
+        大括号保存对象
+        方括号保存数组
